user task send can recv response payload from demo through mctp_bridge
need add a loal EID to the netdev
sudo mctp address add 19 dev mctp_bridge0 (19 is local eid)

sudo mctp address add 19 dev mctp_bridge0

--- a/sfx/driver/readme
+++ b/sfx/driver/readme
@@ -20,6 +20,9 @@ sudo ip link set mctp_bridge0 up
 sudo mctp route add 8 via mctp_bridge0
 sudo mctp address add 8 dev mctp_bridge0
 
+## set the local dev eid so bind/recvfrom can get msg
+sudo mctp address add 19 dev mctp_bridge0
+
 注意一定要先加route , 再绑定 address, 否则route会添加失败
 
 ## show route and net_intf cfg
